--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,22 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
-# dependencies
+# Ignore node_modules
 /node_modules
-/.pnp
-.pnp.js
+/client/node_modules
+/server/backend/node_modules
 
-# testing
-/coverage
+# Ignore environment files
+.env
+client/.env
+server/backend/.env
 
-# production
-/build
-
-# misc
-.DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
+# Ignore logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# Ignore production build
+/build
+
+# Ignore miscellaneous files
+.DS_Store
+.vscode/
+.idea/
