--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "express": "^4.19.2",
     "mongoose": "^8.5.3",
     "react": "^18.3.1",
+    "react-d3-speedometer": "^2.2.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.1",
     "react-scripts": "^5.0.1",
