--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "html2pdf.js": "^0.10.3",
     "mongoose": "^8.5.3",
     "react": "^18.3.1",
     "react-d3-speedometer": "^2.2.1",
