--- a/server/backend/package.json
+++ b/server/backend/package.json
@@ -20,6 +20,7 @@
     "http-proxy-middleware": "^3.0.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.3",
+    "multer": "^1.4.5-lts.2",
     "openai": "^4.85.0"
   }
 }
