--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,8 @@
 {
+  "rewrites": [
+    { "source": "/(.*)", "destination": "/" }
+  ],
   "buildCommand": "cd frontend && npm install && npm run build",
   "outputDirectory": "frontend/build",
-  "installCommand": "cd frontend && npm install",
-  "framework": "create-react-app"
+  "installCommand": "cd frontend && npm install"
 }
