--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "react": "^18.3.1",
     "react-d3-speedometer": "^2.2.1",
     "react-dom": "^18.3.1",
+    "react-intersection-observer": "^9.16.0",
     "react-router-dom": "^6.26.1",
     "react-scripts": "^5.0.1",
     "recharts": "^2.15.0",
